<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_container"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_floating_material_dark"
    tools:context=".MainActivity">

    <!-- CHECKOUT HEADER -->
    <LinearLayout
        android:id="@+id/header_checkout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_glasses"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="30dp"
                    android:layout_height="5dp"
                    android:background="@color/black">
                    <!--DUMMY-->
                    </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="30dp"
                    android:layout_height="5dp"
                    android:background="@color/black"
                    android:layout_marginTop="3dp">
                    <!--DUMMY-->
                    </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="30dp"
                    android:layout_height="5dp"
                    android:background="@color/black"
                    android:layout_marginTop="3dp">
                    <!--DUMMY-->
                    </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/header_checkout_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginStart="30dp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/header_checkout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:textColor="@color/black"
                android:layout_marginStart="6dp"
                android:textSize="30sp"
                android:layout_centerInParent="false"
                android:layout_toEndOf="@+id/header_checkout_num"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="22dp"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_below="@+id/header_checkout_num"
                android:layout_marginStart="28dp"
                android:visibility="gone">
                <!--DUMMY LAYOUT-->
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/color_background">



        <!--CHECKOUT FORM-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/checkout_title_identity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_identity"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:id="@+id/checkout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_firstname"
                android:inputType="textPersonName"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:id="@+id/checkout_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_lastname"
                android:inputType="textPersonName"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:id="@+id/checkout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_email"
                android:layout_marginBottom="25dp"
                android:inputType="textEmailAddress"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <TextView
                android:id="@+id/checkout_title_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_delivery"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:id="@+id/checkout_address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_address1"
                android:inputType="textPostalAddress"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:id="@+id/checkout_address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_address2"
                android:inputType="textPostalAddress"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:id="@+id/checkout_address3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_address3"
                android:inputType="textPostalAddress"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                >

                <EditText
                    android:id="@+id/checkout_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/checkout_city"
                    android:inputType="text"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    />

                <EditText
                    android:id="@+id/checkout_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/checkout_zipcode"
                    android:inputType="number"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/checkout_title_cc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_payment"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/checkout_title_cc_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cctype"
                android:layout_marginStart="10dp"
                />

            <Spinner
                android:id="@+id/checkout_cctype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/cctype"
                android:entries="@array/cctypes"
                android:spinnerMode="dialog">


                </Spinner>

            <EditText
                android:id="@+id/checkout_ccname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_ccname"
                android:inputType="text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <EditText
                android:id="@+id/checkout_ccnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkout_ccnumber"
                android:inputType="number"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/checkout_ccv"
                    />

                <EditText
                    android:id="@+id/checkout_expmonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/checkout_ccexpmonth"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    />

                <EditText
                    android:id="@+id/checkout_expyear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/checkout_ccexpyear"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/checkout_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_submit"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>