<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cart"
    tools:context=".Cart">

    <!--HEADER CART-->
    <LinearLayout
        android:id="@+id/header_cart"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_hats"
        android:layout_alignParentTop="false">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:id="@+id/header">

            <ImageView
                android:id="@+id/header_menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu"
                android:layout_alignParentEnd="true"
                android:padding="7dp"/>
            <TextView
                android:id="@+id/header_home_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shop"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/header_cart_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginStart="30dp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/header_cart_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:textSize="30sp"
                android:layout_centerInParent="false"
                android:layout_toEndOf="@+id/header_cart_num"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="22dp"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_below="@+id/header_cart_num"
                android:layout_marginStart="28dp"
                android:visibility="gone">
                <!--DUMMY LAYOUT-->
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_cart">
    <ScrollView
        android:id="@+id/cart_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="75dp">

        <LinearLayout
            android:id="@+id/cart_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Content generated from Cart.java-->
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/tmp_button_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToCheckout"
            android:padding="20dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</LinearLayout>