<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_container"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_floating_material_dark"
    tools:context=".VdActivity">
    <!-- BASE HEADER -->
    <LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/header_menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu"
                android:layout_alignParentEnd="true"
                android:padding="7dp"/>

            <TextView
                android:id="@+id/header_home_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shop"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/header_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginStart="30dp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hats"
                android:textColor="@color/white"
                android:layout_marginStart="6dp"
                android:textSize="30sp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/header_num"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="22dp"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_below="@+id/header_num"
                android:layout_marginStart="28dp">
                <!--DUMMY LAYOUT-->
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_desc_container">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                </LinearLayout>
        </ScrollView>

</LinearLayout>